some lessons were added

--- a/css_learn/04.Units/index.html
+++ b/css_learn/04.Units/index.html
@@ -7,7 +7,13 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+<style>
+    h1 {
+        font-size: 3rem;
+    }
+</style>
 <body>
+    <h1>Hello world</h1>
     <div class="box fifty-percent">50%</div>
     <div class="box one-hundred-percent">100%</div>
     <hr>
