Tried to make wrapper position fixed

--- a/fancy/apple-like/index.html
+++ b/fancy/apple-like/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <script defer src="app.js"></script>
     <title>Document</title>
 </head>
 <body>
-    <canvas class="airpods-scrolling"></canvas>
-
-    <script src="app.js"></script>
+    <div class="wrapper">
+        <canvas class="airpods-scrolling"></canvas>
+    </div>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos porro eligendi ducimus dicta iste repellendus beatae, sunt omnis modi, a dolor incidunt consectetur maiores possimus ipsum exercitationem magni placeat unde!</p>
 </body>
 </html>
