--- a/fancy/apple-like/index.html
+++ b/fancy/apple-like/index.html
@@ -11,6 +11,6 @@
     <div class="wrapper">
         <canvas class="airpods-scrolling"></canvas>
     </div>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos porro eligendi ducimus dicta iste repellendus beatae, sunt omnis modi, a dolor incidunt consectetur maiores possimus ipsum exercitationem magni placeat unde!</p>
+    <p>Сконструируйте свой ВАЗ</p>
 </body>
 </html>
