--- a/fancy/apple-like/index.html
+++ b/fancy/apple-like/index.html
@@ -9,8 +9,11 @@
 </head>
 <body>
     <div class="wrapper">
+        <p>Сконструируйте свой ВАЗ</p>
+
         <canvas class="airpods-scrolling"></canvas>
     </div>
-    <p>Сконструируйте свой ВАЗ</p>
+    <div class="constructor-info">
+    </div>
 </body>
 </html>
